
Bugfixes:

  * Fix issue on Tomcat & some other application servers that could cause
    corrupted topic names when editing non-ASCII topics.
  * Fix web.xml issue when using Glassfish application server (amerigo5).
  * Resolve a JNDI database connectivity issue (mnencia).
  * Fix an issue related to the SHA-512 algorithm that broke installations
    on JDK versions prior to 1.4.2.

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Dutch translations (Angel).
  * Updated German translations (axelclk).
  * Updated Japanese translations (nattolover).
  * Updated Polish translations (dlpa).


0.5.4
=====

New Features:

  * Upgrade to Spring Framework 2.0.4.
  * Upgrade to commons-dbcp-1.2.2.jar.
  * Upgrade to Lucene Search 2.1.
  * Add Special:Listusers page to display a list of all wiki users.
  * Add option to open external links in a new window.

Bugfixes:

  * Templates containing categories within <includeonly> or <noinclude> tags
    should now work properly.
  * Updating Special:Admin no longer refreshes search index to avoid
    performance issues.
  * Resolve TLD issues that caused errors with Tomcat 5.5 with Debian Etch.

Translation Updates:

  * Updated Dutch translations (Angel).
  * Updated German translations (axelclk).
  * Updated Polish translations (dlpa).


0.5.3
=====

New Features:

  * Upgrade to Spring Framework 2.0.3.
  * Hide edit tab from users who do not have permission to edit a topic.

Bugfixes:

  * Fix an error with Resin that could result in ClassCastException on pages
    displaying "diff" links.
  * Equal signs within headings ("=== foo = bar ===") parsed incorrectly.

Translation Updates:

  * Updated Chinese translations (hfl).
  * Updated Dutch translations (Angel).
  * Updated German translations (axelclk).
  * Updated Japanese translations (nattolover).
  * Updated Polish translations (dlpa).

0.5.2
=====

New Features:

  * Add the option to whitelist/blacklist allowed file upload types.